# MusicMaker_JUCE

./: .clang-tidy  .gitignore  .gitmodules  AudioProject.jucer  CMakeLists.txt  MusicMaker.jucer  PreLoad.cmake  README.md  build_project_main.cmake  configure_clang-tidy.cmake  fix_target_MusicMaker.cmake
src/: Logger.cpp  Logger.h  logger.cpp  logger.h  main.cpp  pch.h
src/sound/: AudioPlayer.cpp  AudioPlayer.h  MidiSynthesizer.cpp  MidiSynthesizer.h  SineWaveSound.cpp  SineWaveSound.h  SineWaveVoice.cpp  SineWaveVoice.h  SynthAudioSource.cpp  SynthAudioSource.h  midi_synthesizer.cpp  midi_synthesizer.h  sine_wave_sound.cpp  sine_wave_voice.cpp  sine_wave_voice.h  synth_audio_source.cpp  synth_audio_source.h
src/theory/: Mode.cpp  Mode.h  Note.cpp  Note.h  Pitch.cpp  Pitch.h  PitchBank.cpp  PitchBank.h  Scale.h  Synthesizer.cpp  Synthesizer.h  mode.cpp  mode.h  note.cpp  note.h  pitch.cpp  pitch.h  pitch_bank.cpp  pitch_bank.h  scale.cpp  scale.h  synthesizer.cpp  synthesizer.h
src/theory/staff/: sequence.cpp  sequence.h  staff.cpp  staff.h  staff_iterator.h
